<resources>
    <string name="app_name">滴滴物流</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello!</string>
    <string name="welcome_info">欢迎使用滴滴物流!</string>
    <string name="noAccount">还没有账号？</string>
    <string name="goRegister">去注册</string>
    <string name="login">登录</string>
    <string name="accountHint">请输入手机号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="passwordConfirmHint">请再次输入密码</string>
    <string name="havaAccount">已有账号？</string>
    <string name="goLogin">去登录</string>
    <string name="register">注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">需求</string>
    <string name="title_dashboard">司机</string>
    <string name="title_notifications">消息</string>
    <string name="title_userinfo">我的</string>
    <string name="code_hint">请输入验证码</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_role">身份选择</string>
    <string name="driver">司机</string>
    <string name="consumer">货主</string>
    <string name="postDemand">发布需求</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="no_message">暂无消息通知</string>
    <string name="view_order_detail">查看订单详情</string>
    <string name="message">消息：</string>
    <string name="order_id">订单号：</string>
    <string name="modify_info">修改资料</string>
    <string name="modify_pwd">修改密码</string>
    <string name="no_order_data">暂无订单数据</string>
    <string name="logout">退出登录</string>
    <string name="user_type_driver">司机</string>
    <string name="user_type_customer">货主</string>
    <string name="name">用户姓名</string>
    <string name="please_select">请选择</string>
    <string name="driver_state_online">接单中</string>
    <string name="driver_state_offline">暂停接单</string>
    <string name="modify_tip">提示：如果无需修改密码，则不用填写密码相关字段</string>
    <string name="submit_modify">提交修改</string>
    <string name="driver_user">滴滴物流司机用户</string>
    <string name="unset">未设置</string>
    <string name="new_user_tip">提示：新用户请尽快完善信息，以免影响后续使用</string>
    <string name="go_des">去这里</string>
</resources>