<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.jiuxiang.didilogistics.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_info"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:ems="10"
                android:hint="@string/accountHint"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={loginViewModel.phone}" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={loginViewModel.password}" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:text="@string/login"
                android:onClick="@{()->loginViewModel.clickLogin()}" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:textSize="16sp"
                android:layout_gravity="bottom" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goRegister"
                android:textColor="#0000FF"
                android:textSize="16sp"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </LinearLayout>
</layout>