<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.jiuxiang.didilogistics.ui.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_info"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="15dp"
                android:text="@string/select_role"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:checkedButton="@={registerViewModel.roleSelect}">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumer"
                    android:textColor="@drawable/select_sex_text"
                    android:background="@drawable/select_sex_bg"
                    android:checked="true"
                    android:button="@null"
                    android:gravity="center"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/select_sex_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/driver"
                    android:textColor="@drawable/select_sex_text"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp" />
            </RadioGroup>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:ems="10"
                android:hint="@string/accountHint"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={registerViewModel.phone}" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={registerViewModel.password}" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp">

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:ems="10"
                android:hint="@string/passwordConfirmHint"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@={registerViewModel.passwordConfirm}" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp"
                android:layout_width="0dp">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/grey"
                    android:ems="10"
                    android:hint="@string/code_hint"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@={registerViewModel.code}" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="50dp">

                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:text="@{registerViewModel.inviteCode}"
                    android:onClick="@{()->registerViewModel.onClickCode()}"
                    android:enabled="@{registerViewModel.codeBtnEnable}" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/register"
                android:onClick="@{()->registerViewModel.onClickRegister()}" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="7dp"
                android:layout_gravity="bottom"
                android:text="@string/havaAccount"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goLogin"
                android:textColor="#0000FF"
                android:textSize="16sp"
                android:layout_gravity="bottom" />
        </LinearLayout>
        <!--        <EditText-->
        <!--            android:id="@+id/et_account"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="textPersonName"-->
        <!--            android:hint="@string/accountHint"-->
        <!--            android:text="@={registerViewModel.phone}" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/et_password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:hint="@string/passwordHint" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/et_password_confirm"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:hint="@string/passwordConfirmHint" />-->

        <!--        <Button-->
        <!--            android:id="@+id/btn_register"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/register"-->
        <!--            android:onClick="@{()->registerViewModel.onClickRegister()}" />-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/havaAccount"-->
        <!--                android:textSize="20sp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/tv_login"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/goLogin"-->
        <!--                android:textSize="20sp"-->
        <!--                android:textColor="#0000FF" />-->
        <!--        </LinearLayout>-->
    </LinearLayout>
</layout>