<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="message"
            type="com.jiuxiang.didilogistics.beans.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{message.time}"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="#c0e6e6e6" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{message.orderID}" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{message.content}"
                        android:textColor="#000000" />
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    app:cardCornerRadius="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#f68033"
                        android:paddingLeft="10dp"
                        android:paddingTop="4dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/view_order_detail"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>