<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="com.jiuxiang.didilogistics.ui.userInfo.UserInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.userInfo.UserInfoFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/avatar"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@{userViewModel.userMutableLiveData.name}"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:hint="@string/name" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手机号："
                    android:layout_marginRight="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{userViewModel.userMutableLiveData.phone}"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户类型："
                    android:layout_marginRight="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{userViewModel.userMutableLiveData.type ? @string/user_type_driver : @string/user_type_customer}"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/grey" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/driver_table">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="司机状态："
                        android:layout_marginRight="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.userMutableLiveData.state ? @string/driver_state_online : @string/driver_state_offline}"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我的位置："
                        android:layout_marginRight="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.userMutableLiveData.curCity}"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="即将前往："
                        android:layout_marginRight="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.userMutableLiveData.desCity}"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="车辆长度："
                        android:layout_marginRight="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.userMutableLiveData.carLength+'米'}"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="可用载重："
                        android:layout_marginRight="10dp"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userViewModel.userMutableLiveData.carWeight+'千'+'克'}"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>
        </TableLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="30dp">

            <Button
                android:id="@+id/modify_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1a7cff"
                android:text="@string/modify_info"
                app:backgroundTint="@null" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="30dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1a7cff"
                android:text="@string/logout"
                app:backgroundTint="@null"
                android:onClick="@{()->userViewModel.logout()}" />
        </androidx.cardview.widget.CardView>
        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="15dp"-->
        <!--            app:cardCornerRadius="30dp">-->

        <!--            <Button-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:background="#1a7cff"-->
        <!--                android:text="@string/modify_pwd"-->
        <!--                app:backgroundTint="@null" />-->
        <!--        </androidx.cardview.widget.CardView>-->

    </LinearLayout>
</layout>